# secured-networks-llc

./: deplaoy-proxmox.yml  tree.txt
platform-services/database/migrations/: 01-init-and-tune.sql
platform-services/quadlets/: rust-app.container
proxmox-support-plane/ansible/: .vault_pass  01-init-.sql  ansible.cfg  bootstrap-offline-vault.sh  core.sh  deploy-fleet.yml  deploy-fleet.yml.old  fix-tailscale.yml  inventory.ini  main.txt  site.yml  teardown-and-rebuild.sh
proxmox-support-plane/ansible/app/: Cargo.toml  Dockerfile
proxmox-support-plane/ansible/app/src/: main.rs
proxmox-support-plane/ansible/group_vars/all/: vault.yml
proxmox-support-plane/ansible/inventory/: hosts.ini  inventory.ini
proxmox-support-plane/ansible/playbooks/: 02-configure-gitea.yml  02-sn-network-validation.yml  03-configure-traefik.yml  04-configure-authentik.yml  05-configure-postgres.yml  build-proxmox-network.yml  core.yml  deploy-fleet.yml  deploy-oci.yml  provision-opnsense-firewall.yml
proxmox-support-plane/ansible/playbooks/Ad-hoc/: 00-provision-containers.yml
proxmox-support-plane/ansible/roles/authentik/tasks/: main.yml
proxmox-support-plane/ansible/roles/common/tasks/: main.yml
proxmox-support-plane/ansible/roles/gitea/tasks/: main.yml
proxmox-support-plane/ansible/roles/grafana/tasks/: main.yml
proxmox-support-plane/ansible/roles/guacamole/tasks/: main.yml
scripts/: proxmox-boot-sequence-fix.sh  proxmox-ssh-injection-fix.sh
telemetry-engine/: Cargo.toml  Dockerfile
telemetry-engine/.gitea/workflows/: deploy.yml
telemetry-engine/src/: main.rs
(+7 files in other folders)
