[package]
name = "att-telemetry"
version = "0.1.2"
edition = "2021"
authors = ["Timothy Harris (TMinus36)"]
description = "Aegis Telematics & Transport Stateless Telemetry Engine"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
